[gd_scene load_steps=28 format=2]

[ext_resource path="res://src/enemies/xsm/Attack.gd" type="Script" id=1]
[ext_resource path="res://src/enemies/xsm/Patrol.gd" type="Script" id=2]
[ext_resource path="res://src/enemies/xsm/Lookout.gd" type="Script" id=3]
[ext_resource path="res://addons/xsm/state.gd" type="Script" id=4]
[ext_resource path="res://src/enemies/xsm/Engage.gd" type="Script" id=5]
[ext_resource path="res://src/enemies/xsm/Death.gd" type="Script" id=6]
[ext_resource path="res://src/enemies/Enemy.gd" type="Script" id=7]
[ext_resource path="res://src/enemies/xsm/OnPlatform.gd" type="Script" id=8]
[ext_resource path="res://src/enemies/xsm/ReturnToPatrol.gd" type="Script" id=9]
[ext_resource path="res://src/enemies/xsm/MoveToHoverPoint.gd" type="Script" id=10]
[ext_resource path="res://src/enemies/xsm/HasTarget.gd" type="Script" id=11]
[ext_resource path="res://src/enemies/xsm/Hover.gd" type="Script" id=12]
[ext_resource path="res://src/enemies/xsm/Hurt.gd" type="Script" id=13]
[ext_resource path="res://assets/gfx/lights/nRmVV.png" type="Texture" id=14]
[ext_resource path="res://assets/gfx/npcs/crosshair002.png" type="Texture" id=15]
[ext_resource path="res://assets/ui/yellow_hp_bar_empty_small.png" type="Texture" id=16]
[ext_resource path="res://assets/ui/yellow_hp_bar_ful_small..png" type="Texture" id=17]

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform sampler2D noise_tex_normal;
uniform sampler2D noise_tex;
uniform float progress : hint_range(0.0, 1.0);
uniform float strength = 1.0;

// If your sprite doesn't have enough space and the explosion gets clipped, 
// you can uncomment this and adjust the scale
//void vertex() {
//	float scale = 3.0;
//	VERTEX *= scale;
//
//	UV *= scale;
//	UV -= (scale - 1.0) / 2.0;
//}

void fragment() {
	vec2 direction = texture(noise_tex_normal, UV).xy; // We're using normal map as direction
	direction -= 0.5; // Since our normal map is a texture, it ranges from 0.0 to 1.0...
	direction *= 2.0; // ...so we're going to make it range from -1.0 to 1.0.
	direction = direction * strength * progress;
	
	// UV for exploded texture
	vec2 tex_size = 1.0 / TEXTURE_PIXEL_SIZE; // Real texture size in pixels
	vec2 uv = floor(UV * tex_size) / (tex_size - 1.0); // Pixelate UV to snap pixels
	uv = uv - direction; // Distort UV
	
	// Texture with exploded UV
	vec4 tex = texture(TEXTURE, uv); 
	
	// Dissolve alpha
	float dissolve = texture(noise_tex, UV).x;
	dissolve = step(progress, dissolve);
	tex.a *= dissolve;
	
	// Border (in case the edge of your sprite stretches, otherwise you can remove this block)
	vec2 border_uv = uv * 2.0 - 1.0;
	border_uv = clamp(abs(border_uv), 0.0, 1.0);
	float border = max(border_uv.x, border_uv.y);
	border = ceil(1.0 - border);
	tex.a *= border;
	
	COLOR = tex;
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/progress = null
shader_param/strength = 1.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "run",
"speed": 6.0
}, {
"frames": [  ],
"loop": true,
"name": "walk",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 16.0
height = 108.0

[sub_resource type="Animation" id=4]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}

[sub_resource type="Animation" id=5]
resource_name = "Death"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "death" ]
}

[sub_resource type="Animation" id=6]
resource_name = "Hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "hurt" ]
}

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "default" ]
}

[sub_resource type="Animation" id=7]
resource_name = "Run"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "run" ]
}

[sub_resource type="Animation" id=2]
resource_name = "Walk"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}

[node name="Enemy" type="KinematicBody2D" groups=["ghost"]]
light_mask = 5
material = SubResource( 10 )
collision_layer = 4
script = ExtResource( 7 )

[node name="Sprite" type="AnimatedSprite" parent="."]
light_mask = 5
frames = SubResource( 3 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="HurtBox" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -33, 52 )

[node name="DetectionBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionBox"]

[node name="FloorRaycast" type="RayCast2D" parent="."]
position = Vector2( 0, -200 )
enabled = true
cast_to = Vector2( 250, 250 )

[node name="FrontRaycast" type="RayCast2D" parent="."]
position = Vector2( 0, -150 )
enabled = true
cast_to = Vector2( 300, 0 )

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="RecoveryTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 4 )
anims/Death = SubResource( 5 )
anims/Hurt = SubResource( 6 )
anims/Idle = SubResource( 1 )
anims/Run = SubResource( 7 )
anims/Walk = SubResource( 2 )

[node name="XSM" type="Node" parent="."]
script = ExtResource( 4 )
history_size = 0
fsm_owner = NodePath("..")
disabled = false
debug_mode = false
timed = false
next_state = NodePath("Alive/OnPlatform/Lookout")

[node name="Alive" type="Node" parent="XSM"]
script = ExtResource( 4 )
disabled = false
debug_mode = false
timed = false
next_state = NodePath("")

[node name="OnPlatform" type="Node" parent="XSM/Alive"]
script = ExtResource( 8 )
disabled = false
debug_mode = false
timed = false
next_state = NodePath("")

[node name="Lookout" type="Node" parent="XSM/Alive/OnPlatform"]
script = ExtResource( 3 )
look_time = 1
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = "Idle"
anim_times_to_play = 1
on_anim_finished = 0
disabled = false
debug_mode = false
timed = false
next_state = NodePath("../../../Death")

[node name="Patrol" type="Node" parent="XSM/Alive/OnPlatform"]
script = ExtResource( 2 )
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = "Walk"
anim_times_to_play = 1
on_anim_finished = 0
disabled = false
debug_mode = false
timed = false
next_state = NodePath("../../../Death")

[node name="Flying" type="Node" parent="XSM/Alive"]
script = ExtResource( 4 )
disabled = false
debug_mode = false
timed = false
next_state = NodePath("")

[node name="ReturnToPatrol" type="Node" parent="XSM/Alive/Flying"]
script = ExtResource( 9 )
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
timed = false
next_state = NodePath("MoveToHoverPoint")

[node name="HasTarget" type="Node" parent="XSM/Alive/Flying"]
script = ExtResource( 11 )
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
timed = false
next_state = NodePath("MoveToHoverPoint")

[node name="MoveToHoverPoint" type="Node" parent="XSM/Alive/Flying/HasTarget"]
script = ExtResource( 10 )
animation_player = NodePath("../../../../../AnimationPlayer")
anim_on_enter = "Walk"
anim_times_to_play = 1
on_anim_finished = 0
disabled = false
debug_mode = false
timed = false
next_state = NodePath("../MoveToHoverPoint")

[node name="Hover" type="Node" parent="XSM/Alive/Flying/HasTarget"]
script = ExtResource( 12 )
animation_player = NodePath("../../../../../AnimationPlayer")
anim_on_enter = "Idle"
anim_times_to_play = 1
on_anim_finished = 0
disabled = false
debug_mode = false
timed = false
next_state = NodePath("../MoveToHoverPoint")

[node name="Engage" type="Node" parent="XSM/Alive/Flying/HasTarget"]
script = ExtResource( 5 )
stop_range = 40.0
animation_player = NodePath("../../../../../AnimationPlayer")
anim_on_enter = "Run"
anim_times_to_play = 1
on_anim_finished = 0
disabled = false
debug_mode = false
timed = false
next_state = NodePath("../MoveToHoverPoint")

[node name="Attack" type="Node" parent="XSM/Alive/Flying/HasTarget"]
script = ExtResource( 1 )
animation_player = NodePath("../../../../../AnimationPlayer")
anim_on_enter = "Attack"
anim_times_to_play = 1
on_anim_finished = 0
disabled = false
debug_mode = false
timed = false
next_state = NodePath("../MoveToHoverPoint")

[node name="Hurt" type="Node" parent="XSM/Alive/Flying"]
script = ExtResource( 13 )
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = "Hurt"
anim_times_to_play = 1
on_anim_finished = 0
disabled = false
debug_mode = false
timed = false
next_state = NodePath("")

[node name="Death" type="Node" parent="XSM"]
script = ExtResource( 6 )
animation_player = NodePath("../../AnimationPlayer")
anim_on_enter = "Death"
anim_times_to_play = 1
on_anim_finished = 0
disabled = false
debug_mode = false
timed = false
next_state = NodePath("")

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 2, -96 )
texture = ExtResource( 14 )
texture_scale = 2.0
range_layer_min = -101
range_item_cull_mask = 7

[node name="Crosshair" type="Sprite" parent="."]
visible = false
texture = ExtResource( 15 )

[node name="HealthBar" type="TextureProgress" parent="."]
light_mask = 0
margin_left = -47.0
margin_top = -265.0
margin_right = 47.0
margin_bottom = -248.0
value = 50.0
texture_under = ExtResource( 16 )
texture_progress = ExtResource( 17 )

[connection signal="body_entered" from="DetectionBox" to="." method="_on_DetectionBox_body_entered"]
[connection signal="body_exited" from="DetectionBox" to="." method="_on_DetectionBox_body_exited"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="RecoveryTimer" to="." method="_on_RecoveryTimer_timeout"]
